# erasure-code-benchmark

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt
benchmark/: benchmark.cpp  benchmark.h  benchmark_runner.cpp  benchmark_runner.h  ecc-benchmark  utils.cpp  utils.h
drop_scripts/: plot_script.py
drop_scripts/drop-rate-test/: .batch_experiments.sh.swp  batch_experiments.sh  experiment_runner.sh
full_bm_no_setup/: benchmark-full.sh  benchmark-test.sh  plot.py  results_erasure-500.csv  results_erasure.csv  test.csv
full_bm_no_setup/bench-QOCZ/: CMakeLists.txt
full_bm_no_setup/bench-QOCZ/src/algorithms/: abstract_bm.hpp  cm256_bm.cpp  isal_bm.hpp  xorec_avx512_bm.hpp  xorec_avx_bm.cpp  xorec_avx_bm.hpp
full_bm_no_setup/bench-QOCZ/src/benchmark/: bm_functions.cpp  bm_functions.hpp  bm_utils.cpp
full_bm_no_setup/bench-QOCZ/src/utils/: utils.hpp
full_bm_no_setup/bench-QOCZ/src/xorec/: xorec.cpp  xorec.hpp  xorec_utils.hpp
full_bm_no_setup/erasure-code-benchmark-full/: CMakeLists.txt
full_bm_no_setup/erasure-code-benchmark-full/src/: main.cpp
full_bm_no_setup/erasure-code-benchmark-full/src/algorithms/: xorec_avx2_bm.cpp  xorec_avx2_bm.hpp  xorec_avx512_bm.cpp  xorec_bm.cpp
full_bm_no_setup/erasure-code-benchmark-full/src/benchmark/: bm_config.cpp  bm_config.hpp  bm_functions.cpp  bm_functions.hpp  bm_reporters.cpp  bm_reporters.hpp  bm_utils.cpp  bm_utils.hpp
full_bm_no_setup/erasure-code-benchmark-full/src/utils/: utils.cpp
full_bm_no_setup/erasure-code-benchmark-full/src/xorec/: xorec.cpp  xorec.hpp  xorec_utils.hpp
include/: abstract_benchmark.h  baseline.h  baseline_benchmark.h  baseline_ecc.h  benchmark.h  benchmark_reporters.h  benchmark_result_writer.h  benchmark_runner.h  cm256_benchmark.h  configure  generic_benchmark_runner.h  isal_benchmark.h  leopard_benchmark.h  progressbar.h  utils.h  wirehair_benchmark.h  xor_baseline.h  xorbaseline.h
results/raw/: 500it_final.csv  all_results100.csv  all_versions.csv  ault06_gpu_10it.csv  ault06_preliminary_10it.csv  ault06_singlecore_10it.csv  bench_results_1000it.csv  benchmark_all_avx.csv  benchmark_results.csv  benchmark_results_100.csv  benchmark_results_2000_it.csv  benchmark_results_first_2000_it.csv  benchmark_results_intelv100.csv  benchmark_results_intelv100save.csv  benchmark_results_test.csv  cpu_ec_results.csv  cuda_test.csv  ec_results.csv  ensure_correctness.csv  final_results copy.csv  final_results.csv  gpu_cmp_cpu_parity.csv  gpu_computation.csv  gpu_results.csv  logs.csv  more_sm.csv  new_results.csv  optimized_gpu_results.csv  paper_final_results.csv  prefetch_decode_done.csv  preliminary_10.csv  results_erasure.csv  rewrite_prefetch.csv  simple_optimization.csv  single_core_500it_final.csv  small_message.csv  temp.csv  temp_test2.csv  test.csv  test_nvprof.csv  (+10 more)
results/raw/intelv100_10it/: perf_results.csv
results/raw/intelv100_10it_no_avx/: ec_results.csv  perf_results.csv
results/raw/xorec/: ec_results.csv  perf_results.csv
scripts/: main.py  plot_benchmark_results.py  plot_results.py
scripts/utils/: compute.py  config.py  data.py  hardware_info.py  plot.py  theoretical_bounds.py  utils.py
src/: benchmark_reporters.cpp  benchmark_result_writer.cpp  benchmark_runner.cpp  main.cpp  utils.cpp  xor_baseline.cpp  xorbaseline.cpp
src/algorithms/: abstract_benchmark.h  abstract_benchmark.hpp  abstract_bm.cpp  abstract_bm.hpp  all_gpu_benchmark.cpp  all_gpu_benchmark.h  baseline_benchmark.cpp  baseline_benchmark.h  cm256_benchmark.cpp  cm256_benchmark.h  cm256_benchmark.hpp  cm256_bm.cpp  cm256_bm.hpp  cuda_xorec_benchmark.cpp  cuda_xorec_benchmark.h  isal_benchmark.cpp  isal_benchmark.h  isal_benchmark.hpp  isal_bm.cpp  isal_bm.hpp  leopard_benchmark.cpp  leopard_benchmark.h  leopard_benchmark.hpp  leopard_bm.cpp  leopard_bm.hpp  wirehair_benchmark.cpp  wirehair_benchmark.h  wirehair_benchmark.hpp  wirehair_bm.cpp  wirehair_bm.hpp  xorec_benchmark.cpp  xorec_benchmark.h  xorec_benchmark.hpp  xorec_bm.cpp  xorec_bm.hpp  xorec_gpu_cmp_benchmark.cpp  xorec_gpu_cmp_benchmark.h  xorec_gpu_cmp_benchmark.hpp  xorec_gpu_cmp_bm.cpp  xorec_gpu_cmp_bm.hpp  (+9 more)
src/baseline/: xor_ec.cpp  xor_ec.h  xorbaseline.cpp  xorbaseline.h  xorec.cpp  xorec.h
src/benchmark/: abstract_runner.hpp  benchmark_config.h  benchmark_config.hpp  benchmark_functions.cpp  benchmark_functions.h  benchmark_functions.hpp  benchmark_generic_runner.h  benchmark_generic_runner.hpp  benchmark_reporters.cpp  benchmark_reporters.hpp  benchmark_utils.cpp  benchmark_utils.h  benchmark_utils.hpp  bm_config.cpp  bm_config.hpp  bm_functions.cpp  bm_functions.hpp  bm_generic_runner.hpp  bm_reporters.cpp  bm_reporters.hpp  bm_utils.cpp  bm_utils.hpp  runners.cpp  runners.hpp
src/library_benchmark/: baseline.cpp  baseline_benchmark.cpp  baseline_ecc.cpp  cm256_benchmark.cpp  isal_benchmark.cpp  leopard_benchmark.cpp  wirehair_benchmark.cpp
src/reporters/: bm_reporters.cpp  bm_reporters.hpp  console_reporter.cpp  console_reporter.hpp  csv_reporter.cpp  csv_reporter.hpp
src/utils/: benchmark_cli.cpp  benchmark_cli.hpp  benchmark_suite.cpp  benchmark_suite.hpp  bm_cli.cpp  bm_cli.hpp  cuda_utils.cu  cuda_utils.cuh  progressbar.hpp  utils.cpp  utils.h  utils.hpp
src/xorec/: gpu_xorec.cu  gpu_xorec.cuh  xorec.cpp  xorec.h  xorec.hpp  xorec_gpu.cpp  xorec_gpu.cu  xorec_gpu.cuh  xorec_gpu.h  xorec_gpu_cmp.cpp  xorec_gpu_cmp.cu  xorec_gpu_cmp.cuh  xorec_gpu_cmp.h  xorec_gpu_cmp.hpp  xorec_utils.cpp  xorec_utils.h  xorec_utils.hpp
